# Fortuna

./: .gitignore  Anchor.toml  README.md  app.js  index.html  styles.css  vercel.json
fortuna/: README.md  package.json  pnpm-lock.yaml
fortuna/app/: globals.css  layout.tsx  page.tsx
fortuna/components/: AyaraMascot.tsx
programs/ayara/: Cargo.toml
programs/ayara/src/: errors.rs  lib.rs  state.rs
programs/ayara/src/instructions/: buy_ticket.rs  claim_prize.rs  close_draw.rs  create_draw.rs  initialize_config.rs  mock_settle_draw.rs  mod.rs
tests/: ayara.ts
