[package]
name = "ayara"
version = "0.1.0"
description = "Ayara — verifiable jackpot draw on Solana (hackathon POC)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ayara"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = "0.30.1"
